--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     padding: 0;
     font-family: 'Merriweather', serif;
     font-family: 'Inter', sans-serif;
+  
 }
 
 
@@ -84,3 +85,42 @@
 
 
 /* all categories styles end */
+
+/* welcome to styles start */
+
+
+/* welcome to styles end */
+
+
+/* place, date, time styles start */
+.place-date{
+    background-image:  linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+
+    width: 75% ;
+    color: #070211;
+    text-align: center;
+    font-family: Inter;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 56px;
+    padding: 10% 0;
+    margin: 0 auto;
+}
+.place-date h1{
+    padding-bottom: 2%;
+}
+.place-date span{
+    color: #f00;
+}
+.place-date button{
+    color: #fff;
+    background-color: #f00;
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+/* place, date, time styles end */
