--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@
     font-family: 'Inter', sans-serif;
   
 }
-
+section{
+    margin-bottom: 8%;
+}
 
 
 /* common css styles end */
@@ -20,7 +22,8 @@
 
 .banner{
     overflow: hidden;
-    background-image: url("resources/Banner\ Image.png");
+    background-image: url("resources/Banner\ Image.png"), linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+    background-blend-mode: overlay;
     width: 75%;
     height: 100vh;
     border-radius: 16px;
@@ -88,7 +91,39 @@
 
 /* welcome to styles start */
 
-
+.welcome-to{
+    background-image: url("resources/Vectorrr.png"),  linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    border-radius: 2%;
+    width: 75%;
+    height: 100vh;
+    margin: 0 auto;
+    color: #fff;
+}
+.welcome-to h1{  
+    padding: 12% 0 0 8%;
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 88px;
+    letter-spacing: 7.04;
+    font-family: 'Merriweather';
+}
+.welcome-to p{
+    color: rgba(255, 255, 255, 0.80);
+    padding: 2% 0 2% 8%;
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px; /* 166.667% */
+}
+.welcome-to h5{
+    padding: 2% 0 0 12%;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+}
 /* welcome to styles end */
 
 
@@ -124,3 +159,155 @@
 }
 
 /* place, date, time styles end */
+
+/* new best offer styles start */
+.new-best-container{
+    display: flex;
+    width: 75%;
+    height: 100vh;
+    margin: 0 auto;
+    gap: 4%;
+    padding-left: 1%;
+    align-items: center;
+    background-color: aquamarine;
+}
+.new-best-container h3{
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+   
+}
+.new-best-container h1{
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    padding: 2% 0;
+}
+.new-best-container p{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px; /* 160% */
+}
+.new-best-container h2{
+    color: #F00;
+    font-size: 48px;
+    font-weight: 700;
+}
+/* .new-best-container img{
+    display: block;
+    padding: 30% 0;
+    border-radius: 5%;
+    border-color: #F00;
+} */
+
+.new-best-container circle-img{
+    display: block;
+    border-color: #F00;
+    border-radius: 5px;
+    width: 100%;
+}
+/* new best offer styles end */
+
+/* what is functional styles start */
+
+.what-is-function{
+    width: 75%;
+    text-align: center;
+    margin: 0 auto;
+
+}
+.what-is-function h4{
+        color: #070211;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+.what-is-function h1{
+    color: #070211;
+font-family: Merriweather;
+font-size: 72px;
+font-weight: 900;
+}
+
+.what-is-function h1 span{
+    color: #F00;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-weight: 900;
+}
+.what-is-function p{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 32px; /* 160% */
+}
+
+/* img */
+
+.images-width{
+    background-image: url("resources/Group\ 75.png"),url("resources/Rectangle\ 1.png"),url("resources/Rectangle\ 2.png");
+    /* background-image: url("resources/Rectangle\ 1.png"); */
+    background-repeat: no-repeat;
+    background-position: bottom left, top right, bottom;
+    margin: 0 auto;
+    width: 75%;
+    height: 100vh;
+    padding: 0 10px;
+}
+
+/* what is functional styles  */
+
+/* the best gift styles start */
+.best-gift{
+    width: 75%;
+    height: 100vh;
+    margin: 0 auto;
+}
+.best-gift h2{
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+
+}
+.best-gift h1{
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+}
+.best-gift p{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px; /* 160% */
+}
+
+/* the best gift styles end */
+
+/* grid layout styles start */
+
+.grid-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    
+    margin: 0 auto;
+    padding: ;
+
+
+}
+.grid-container *img{
+     width: 100%;
+}
+.grid-item{
+
+}
+
+
+/* grid layout styles end */
