--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
   
 }
 section{
-    margin-bottom: 8%;
+    margin-bottom: 5%;
+    
 }
 
 
@@ -25,6 +26,7 @@ section{
     background-image: url("resources/Banner\ Image.png"), linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
     background-blend-mode: overlay;
     width: 75%;
+    max-width: 1320px;
     height: 100vh;
     border-radius: 16px;
     margin: 0 auto;
@@ -35,7 +37,7 @@ section{
 .banner .banner-description{   
     color: white;
     text-align: center;
-    padding-top: 20%;
+    padding-top: 15%;
     
     /* background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%); */
 
@@ -59,7 +61,7 @@ section{
     color: #f00;
     text-align: center;
     font-family: Inter;
-    padding-top: 10% ;
+    padding-top: 5% ;
 }
 .off h1{
     font-size: 88px;
@@ -68,7 +70,7 @@ section{
 .off p{
     font-size: 24px;
     font-weight: 500;
-    padding-top: 3% ;
+    padding-top: 2% ;
 }
 /* 65% off styles end */
 
@@ -82,7 +84,7 @@ section{
 .all-categories h1{
     font-size: 48px;
     font-weight: 700;
-    padding: 3% 0;
+  
 }
 
 
@@ -90,16 +92,29 @@ section{
 /* all categories styles end */
 
 /* welcome to styles start */
-
-.welcome-to{
-    background-image: url("resources/Vectorrr.png"),  linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
-    background-blend-mode: overlay;
-    background-repeat: no-repeat;
-    border-radius: 2%;
+.welcome-w{
     width: 75%;
     height: 100vh;
     margin: 0 auto;
+}
+.welcome-to{
+    display: flex;
+    background-image: url("resources/Vectorrr.png"), linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    border-radius: 2%;
     color: #fff;
+}
+.welcome-to img{  
+    /* width: 319.83px;
+    height: 464.662px; */
+    width:250px ;
+    padding:70px 40px ;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+
 }
 .welcome-to h1{  
     padding: 12% 0 0 8%;
@@ -153,7 +168,7 @@ section{
     text-decoration: none;
     border: none;
     border-radius: 5px;
-    padding: 10px 20px;
+    padding: 12px 25px;
     font-size: 20px;
     font-weight: 700;
 }
@@ -161,15 +176,25 @@ section{
 /* place, date, time styles end */
 
 /* new best offer styles start */
+.circle-img img{
+    width: 300px;
+    height: 300px;
+    border: 16px solid #F00;
+    border-radius: 300px;
+    padding: 20px;
+  
+
+}
 .new-best-container{
     display: flex;
     width: 75%;
+    max-width: 1600px;
     height: 100vh;
     margin: 0 auto;
     gap: 4%;
     padding-left: 1%;
     align-items: center;
-    background-color: aquamarine;
+   
 }
 .new-best-container h3{
     color: #F00;
@@ -206,8 +231,8 @@ section{
 
 .new-best-container circle-img{
     display: block;
-    border-color: #F00;
-    border-radius: 5px;
+    border-radius: 465px;
+    border: 15px solid #F00;
     width: 100%;
 }
 /* new best offer styles end */
@@ -260,13 +285,15 @@ font-weight: 900;
     padding: 0 10px;
 }
 
-/* what is functional styles  */
+/* what is functional styles end */
 
 /* the best gift styles start */
+
 .best-gift{
     width: 75%;
-    height: 100vh;
+    max-width: 1600px;
     margin: 0 auto;
+    padding: 4% 0;
 }
 .best-gift h2{
     color: #F00;
@@ -295,19 +322,125 @@ font-weight: 900;
 
 .grid-container{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    
+    justify-content: center;
+    grid-template-columns: 32% 32% 32%;
     margin: 0 auto;
-    padding: ;
-
-
+    width: 75%;
+    gap: 2%;
 }
-.grid-container *img{
-     width: 100%;
-}
-.grid-item{
-
+.grid-container img{
+    width: 100%;
 }
 
 
 /* grid layout styles end */
+
+/* Subscribe styles start */
+
+.subscribe-container{
+    width: 55%;
+    max-width: 1320px;
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+    margin: 0 auto;
+    text-align: center;
+    justify-content: center;
+    padding: 8% 10%;
+}
+.subscribe-container h1{
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+}
+.subscribe-container p{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    padding-bottom: 3%;
+    line-height: 32px; /* 160% */
+}
+
+/* form{
+    width: 648px;
+    height: 72px;
+ 
+} */
+form .sub{
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+    flex-shrink: 0;
+    color: rgba(7, 2, 17, 0.30);
+    text-align: center;
+    font-family: Inter;
+    font-size: 18px;
+    padding: 2% 10% 2% 0%;
+    border: none;
+    font-weight: 400;
+   
+}
+form button{
+    color: #FFF;
+    background-color: #F00;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 600;
+    border: none;
+    padding: 2% 4%;
+    border-radius: 0 40% 40% 0;
+}
+  
+  /* Add the focus effect to the form so 
+
+/* Subscribe styles end */
+
+/* footer styles start */
+
+footer{
+    background-color: #070211;
+    color: #FFF;
+    font-family: 'Inter';
+    
+}
+.footer-container{
+    display: flex;
+    justify-content: space-between;
+    padding: 6% 10%;
+
+}
+.footer-container h5{
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 40px; /* 166.667% */
+}
+hr{
+    width: 80%;
+    max-width: 1320px;
+    margin: 0 auto;
+    background: rgba(255, 255, 255, 0.15);
+}
+
+/* contacts */
+
+.contacts{
+    display: flex;
+    width: 75%;
+    text-align: center;
+    justify-content: center;
+    margin: 0 auto;
+    gap: 1%;
+    padding: 8% 0;
+}
+.unsubscribe{
+    display: flex;
+    justify-content: space-between;
+    padding: 5% 10%;
+}
+.unsubscribe div{
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 40px; /* 166.667% */
+}
+/* footer styles end */
