--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ section{
 .off{
     color: #f00;
     text-align: center;
-    font-family: Inter;
+    font-family: 'Inter';
     padding-top: 5% ;
 }
 .off h1{
@@ -78,7 +78,7 @@ section{
 
 .all-categories{
     text-align: center;
-    font-family: Inter;
+    font-family: 'Inter';
 
 }
 .all-categories h1{
@@ -95,39 +95,40 @@ section{
 .welcome-w{
     width: 75%;
     height: 100vh;
+    padding: 5%;
     margin: 0 auto;
 }
 .welcome-to{
     display: flex;
+    overflow: hidden;
     background-image: url("resources/Vectorrr.png"), linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
     border-radius: 2%;
     color: #fff;
+    width: 100;
+    height: 100vh;
+    position: relative;
+}
+div.imga{
+    position: absolute;
+    right: -10%;
+    top: 30%;
 }
 .welcome-to img{  
-    /* width: 319.83px;
-    height: 464.662px; */
-    width:250px ;
-    padding:70px 40px ;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-
+    width: 50%;
 }
+
 .welcome-to h1{  
     padding: 12% 0 0 8%;
-    font-size: 64px;
+    font-size: 60px;
     font-weight: 900;
-    line-height: 88px;
-    letter-spacing: 7.04;
     font-family: 'Merriweather';
 }
 .welcome-to p{
     color: rgba(255, 255, 255, 0.80);
     padding: 2% 0 2% 8%;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 18px;
     font-weight: 400;
     line-height: 30px; /* 166.667% */
@@ -135,7 +136,7 @@ section{
 .welcome-to h5{
     padding: 2% 0 0 12%;
     color: #FFF;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 20px;
     font-weight: 700;
 }
@@ -145,11 +146,10 @@ section{
 /* place, date, time styles start */
 .place-date{
     background-image:  linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
-
     width: 75% ;
     color: #070211;
     text-align: center;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 32px;
     font-weight: 600;
     line-height: 56px;
@@ -171,6 +171,9 @@ section{
     padding: 12px 25px;
     font-size: 20px;
     font-weight: 700;
+}
+.place-date button:hover{
+    background-color: rgb(230, 141, 141);   
 }
 
 /* place, date, time styles end */
@@ -197,21 +200,21 @@ section{
 }
 .new-best-container h3{
     color: #F00;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 24px;
     font-weight: 500;
    
 }
 .new-best-container h1{
     color: #070211;
-    font-family: Merriweather;
+    font-family: 'Merriweather';
     font-size: 48px;
     font-weight: 900;
     padding: 2% 0;
 }
 .new-best-container p{
     color: rgba(7, 2, 17, 0.60);
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 20px;
     font-weight: 400;
     line-height: 32px; /* 160% */
@@ -254,13 +257,13 @@ section{
 }
 .holiday-text h3{
     color: #070211;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 24px;
     font-weight: 500;
 }
 .holiday-text h1{
     color: #F00;
-    font-family: Merriweather;
+    font-family: 'Merriweather';
     font-size: 72px;
     font-weight: 900;
 }
@@ -270,7 +273,7 @@ section{
 .holiday-text p{
     max-width: 1068px;
     color: rgba(7, 2, 17, 0.60);
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 20px;
     font-weight: 500;
     line-height: 32px; /* 160% */
@@ -323,20 +326,20 @@ section{
 }
 .best-gift h2{
     color: #F00;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 24px;
     font-weight: 500;
 
 }
 .best-gift h1{
     color: #070211;
-    font-family: Merriweather;
+    font-family: 'Merriweather';
     font-size: 48px;
     font-weight: 900;
 }
 .best-gift p{
     color: rgba(7, 2, 17, 0.60);
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 20px;
     font-weight: 400;
     line-height: 32px; /* 160% */
@@ -357,6 +360,9 @@ section{
 .grid-container img{
     width: 100%;
 }
+.grid-container img:hover{
+    opacity: 0.6;
+}
 
 
 /* grid layout styles end */
@@ -375,13 +381,13 @@ section{
 }
 .subscribe-container h1{
     color: #070211;
-    font-family: Merriweather;
+    font-family:'Merriweather';
     font-size: 48px;
     font-weight: 900;
 }
 .subscribe-container p{
     color: rgba(7, 2, 17, 0.60);
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 20px;
     font-weight: 400;
     padding-bottom: 3%;
@@ -402,7 +408,7 @@ input[type=email]{
     background: #FFF;
     color: rgba(7, 2, 17, 0.30);
     text-align: center;    
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 18px;
     font-weight: 400;
   
@@ -416,7 +422,7 @@ input[type=submit] {
    border-radius: 0px 50px 50px 0px;
    background: #F00;
    color: #FFF;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 20px;
     font-weight: 600;
 }
